# COFF3E

./: bot.py  pyproject.toml  requirements.txt  webserver.py
commands/: help.py  hex.py  info.py  music.py  ping.py  steal.py  suggest.py
events/: convo_sano.py  convo_why.py  message_delete.py  message_edit.py
levelsys/: ranking.py
resources/: main.db
