[tool.poetry]
name = "COFF3E"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^1.1.2"
colorama = "^0.4.3"
aiohttp = "^3.6.2"
async-timeout = "^3.0.1"
youtube-dl = "^2020.9.20"
PyNaCl = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
